--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta property="og:title" content="Newtown Movement">
+  <meta property="og:url" content="newtown-movement.com">
+  <meta property="og:description" content="Youngbin Kim" <meta property="og:image"
+    content="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/%EC%83%88%EB%A7%88%EC%9D%84%EA%B8%B0.svg/1200px-%EC%83%88%EB%A7%88%EC%9D%84%EA%B8%B0.svg.png">
 
   <title>Newtown Movement</title>
   <meta content="" name="description">
