--- a/cutting_project.html
+++ b/cutting_project.html
@@ -77,6 +77,10 @@
                   <img src="assets/img/portfolio/cutting/6.png" alt="">
                 </div>
 
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/cutting/7.png" alt="">
+                </div>
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
