--- a/LVMH_sustainability_project.html
+++ b/LVMH_sustainability_project.html
@@ -55,23 +55,28 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/sustainability/1.png" alt="">
+                  <img src="assets/img/portfolio/sustainability/1.png" alt=""
+                    onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 1.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/sustainability/2.png" alt="">
+                  <img src="assets/img/portfolio/sustainability/2.png" alt=""
+                    onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 2.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/sustainability/3.png" alt="">
+                  <img src="assets/img/portfolio/sustainability/3.png" alt=""
+                    onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 3.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/sustainability/4.png" alt="">
+                  <img src="assets/img/portfolio/sustainability/4.png" alt=""
+                    onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 4.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/sustainability/5.png" alt="">
+                  <img src="assets/img/portfolio/sustainability/5.png" alt=""
+                    onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 5.png')">
                 </div>
 
               </div>
