--- a/jersey_project.html
+++ b/jersey_project.html
@@ -55,39 +55,48 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/jersey/1.png" alt="">
+                  <img src="assets/img/portfolio/jersey/1.png" alt=""
+                    onclick="window.open('assets/img/portfolio/jersey/jersey Project/Page 1.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/jersey/2.png" alt="">
+                  <img src="assets/img/portfolio/jersey/2.png" alt=""
+                    onclick="window.open('assets/img/portfolio/jersey/jersey Project/Page 2.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/jersey/3.png" alt="">
+                  <img src="assets/img/portfolio/jersey/3.png" alt=""
+                    onclick="window.open('assets/img/portfolio/jersey/jersey Project/Page 3.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/jersey/4.png" alt="">
+                  <img src="assets/img/portfolio/jersey/4.png" alt=""
+                    onclick="window.open('assets/img/portfolio/jersey/jersey Project/Page 4.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/jersey/5.png" alt="">
+                  <img src="assets/img/portfolio/jersey/5.png" alt=""
+                    onclick="window.open('assets/img/portfolio/jersey/jersey Project/Page 5.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/jersey/6.png" alt="">
+                  <img src="assets/img/portfolio/jersey/6.png" alt=""
+                    onclick="window.open('assets/img/portfolio/jersey/jersey Project/Page 6.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/jersey/7.png" alt="">
+                  <img src="assets/img/portfolio/jersey/7.png" alt=""
+                    onclick="window.open('assets/img/portfolio/jersey/jersey Project/Page 7.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/jersey/8.png" alt="">
+                  <img src="assets/img/portfolio/jersey/8.png" alt=""
+                    onclick="window.open('assets/img/portfolio/jersey/jersey Project/Page 8.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/jersey/9.png" alt="">
+                  <img src="assets/img/portfolio/jersey/9.png" alt=""
+                    onclick="window.open('assets/img/portfolio/jersey/jersey Project/Page 9.png')">
                 </div>
 
               </div>
