--- a/cutting_project.html
+++ b/cutting_project.html
@@ -53,36 +53,44 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/cutting/1.png" alt="">
+                <div class="swiper-slide">"
+                  <img src="assets/img/portfolio/cutting/1.png" alt=""
+                    onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 1.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/cutting/2.png" alt="">
+                  <img src="assets/img/portfolio/cutting/2.png" alt=""
+                    onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 2.png')">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/cutting/3.png" alt="">
+                <div class=" swiper-slide">
+                  <img src="assets/img/portfolio/cutting/3.png" alt=""
+                    onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 3.png')">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/cutting/4.png" alt="">
+                <div class=" swiper-slide">
+                  <img src="assets/img/portfolio/cutting/4.png" alt=""
+                    onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 4.png')">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/cutting/5.png" alt="">
+                <div class=" swiper-slide">
+                  <img src="assets/img/portfolio/cutting/5.png" alt=""
+                    onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 5.png')">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/cutting/6.png" alt="">
+                <div class=" swiper-slide">
+                  <img src="assets/img/portfolio/cutting/6.png" alt=""
+                    onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 6.png')">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/cutting/7.png" alt="">
+                <div class=" swiper-slide">
+                  <img src="assets/img/portfolio/cutting/7.png" alt=""
+                    onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 7.png')">
                 </div>
 
               </div>
-              <div class="swiper-pagination"></div>
+              <div class=" swiper-pagination">
+              </div>
             </div>
 
           </div>
