--- a/denim_project.html
+++ b/denim_project.html
@@ -55,39 +55,48 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/1.png" alt="">
+                  <img src="assets/img/portfolio/denim/1.png" alt=""
+                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 1.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/2.png" alt="">
+                  <img src="assets/img/portfolio/denim/2.png" alt=""
+                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 2.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/3.png" alt="">
+                  <img src="assets/img/portfolio/denim/3.png" alt=""
+                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 3.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/4.png" alt="">
+                  <img src="assets/img/portfolio/denim/4.png" alt=""
+                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 4.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/5.png" alt="">
+                  <img src="assets/img/portfolio/denim/5.png" alt=""
+                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 5.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/6.png" alt="">
+                  <img src="assets/img/portfolio/denim/6.png" alt=""
+                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 6.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/7.png" alt="">
+                  <img src="assets/img/portfolio/denim/7.png" alt=""
+                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 7.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/8.png" alt="">
+                  <img src="assets/img/portfolio/denim/8.png" alt=""
+                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 8.png')">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/9.png" alt="">
+                  <img src="assets/img/portfolio/denim/9.png" alt=""
+                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 9.png')">
                 </div>
 
               </div>
