--- a/denim_project.html
+++ b/denim_project.html
@@ -56,7 +56,7 @@
 
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/denim/1.png" alt=""
-                    >
+                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 1.png')">
                 </div>
 
                 <div class="swiper-slide">
