--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill"><i class="bi bi-chevron-right"></i> Pattern Making (Cutting)</span>
+            <span class="skill"><i class="bi bi-chevron-right"></i> Pattern Cutting</span>
           </div>
 
           <div class="progress">
@@ -149,11 +149,15 @@
           </div>
 
           <div class="progress">
-            <span class="skill"><i class="bi bi-chevron-right"></i> Fine Art Drawing (Since 2018)</span>
+            <span class="skill"><i class="bi bi-chevron-right"></i> Expert Watercolour Painting / Dessin (Since 2011)</span>
           </div>
 
           <div class="progress">
             <span class="skill"><i class="bi bi-chevron-right"></i> Fashion Illustration & Coloring</span>
+          </div>
+
+          <div class="progress">
+            <span class="skill"><i class="bi bi-chevron-right"></i> Leather Painting & Leather Dying (Restoration)</span>
           </div>
 
         </div>
@@ -368,7 +372,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>Flat 14, 39 St Paul's Road, London, N1 2TH</p>
+            <p>Flat 9, Lanesborough Court , 1 Chillingworth Road, London, N7 8QQ</p>
           </div>
         </div>
 
