--- a/LVMH_sustainability_project.html
+++ b/LVMH_sustainability_project.html
@@ -50,54 +50,40 @@
 
           <div class="col-lg-8">
             <h2 class="portfolio-title">LVMH Sustainability Project</h2>
+            <div class="images">
+              <img src="assets/img/portfolio/sustainability/1.png" alt=""
+                onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 1.png')">
 
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
+              <img src="assets/img/portfolio/sustainability/2.png" alt=""
+                onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 2.png')">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/sustainability/1.png" alt=""
-                    onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 1.png')">
-                </div>
+              <img src="assets/img/portfolio/sustainability/3.png" alt=""
+                onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 3.png')">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/sustainability/2.png" alt=""
-                    onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 2.png')">
-                </div>
+              <img src="assets/img/portfolio/sustainability/4.png" alt=""
+                onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 4.png')">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/sustainability/3.png" alt=""
-                    onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 3.png')">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/sustainability/4.png" alt=""
-                    onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 4.png')">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/sustainability/5.png" alt=""
-                    onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 5.png')">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-
+              <img src="assets/img/portfolio/sustainability/5.png" alt=""
+                onclick="window.open('assets/img/portfolio/sustainability/sustainability Project/Page 5.png')">
+              
+              <h6><a href="index.html#portfolio">Back to Portfolio list</a></h6>
           </div>
-
-          <div class="col-lg-4 portfolio-info">
-            <h3>LVMH Sustainability Project - (Emilio Pucci)</h3>
-            <ul>
-              <li>UAL Central Saint Martins</li>
-              <li>BA fashion design Menswear 2nd yr</li>
-              <li>Youngbin Kim</li>
-              <li>'Sustainability project'</li>
-            </ul>
-          </div>
-
-        </div>
 
       </div>
+
+      <div class="col-lg-4 portfolio-info">
+        <h3>LVMH Sustainability Project - (Emilio Pucci)</h3>
+        <ul>
+          <li>UAL Central Saint Martins</li>
+          <li>BA fashion design Menswear 2nd yr</li>
+          <li>Youngbin Kim</li>
+          <li>'Sustainability project'</li>
+        </ul>
+      </div>
+
+    </div>
+
+    </div>
     </div><!-- End Portfolio Details -->
 
   </main><!-- End #main -->
