--- a/cutting_project.html
+++ b/cutting_project.html
@@ -50,64 +50,47 @@
           <div class="col-lg-8">
             <h2 class="portfolio-title">Cutting Project</h2>
 
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
+            <div class="images">
 
-                <div class="swiper-slide">"
-                  <img src="assets/img/portfolio/cutting/1.png" alt=""
-                    onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 1.png')">
-                </div>
+              <img src="assets/img/portfolio/cutting/1.png" alt=""
+                onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 1.png')">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/cutting/2.png" alt=""
-                    onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 2.png')">
-                </div>
+              <img src="assets/img/portfolio/cutting/2.png" alt=""
+                onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 2.png')">
 
-                <div class=" swiper-slide">
-                  <img src="assets/img/portfolio/cutting/3.png" alt=""
-                    onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 3.png')">
-                </div>
+              <img src="assets/img/portfolio/cutting/3.png" alt=""
+                onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 3.png')">
 
-                <div class=" swiper-slide">
-                  <img src="assets/img/portfolio/cutting/4.png" alt=""
-                    onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 4.png')">
-                </div>
+              <img src="assets/img/portfolio/cutting/4.png" alt=""
+                onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 4.png')">
 
-                <div class=" swiper-slide">
-                  <img src="assets/img/portfolio/cutting/5.png" alt=""
-                    onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 5.png')">
-                </div>
+              <img src="assets/img/portfolio/cutting/5.png" alt=""
+                onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 5.png')">
 
-                <div class=" swiper-slide">
-                  <img src="assets/img/portfolio/cutting/6.png" alt=""
-                    onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 6.png')">
-                </div>
+              <img src="assets/img/portfolio/cutting/6.png" alt=""
+                onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 6.png')">
 
-                <div class=" swiper-slide">
-                  <img src="assets/img/portfolio/cutting/7.png" alt=""
-                    onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 7.png')">
-                </div>
-
-              </div>
-              <div class=" swiper-pagination">
-              </div>
+              <img src="assets/img/portfolio/cutting/7.png" alt=""
+                onclick="window.open('assets/img/portfolio/cutting/Cutting Project/Page 7.png')">
+            
+              <h6><a href="index.html#portfolio">Back to Portfolio list</a></h6>
             </div>
 
           </div>
 
-          <div class="col-lg-4 portfolio-info">
-            <h3>Injury</h3>
-            <ul>
-              <li>UAL Central Saint Martins</li>
-              <li>BA fashion design Menswear 2nd yr</li>
-              <li>Youngbin Kim</li>
-              <li>'Cutting project'</li>
-            </ul>
-          </div>
-
+        <div class="col-lg-4 portfolio-info">
+          <h3>Injury</h3>
+          <ul>
+            <li>UAL Central Saint Martins</li>
+            <li>BA fashion design Menswear 2nd yr</li>
+            <li>Youngbin Kim</li>
+            <li>'Cutting project'</li>
+          </ul>
         </div>
 
       </div>
+
+    </div>
     </div><!-- End Portfolio Details -->
 
   </main><!-- End #main -->
