--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
           <p><em>University of the Arts London (UAL) Central Saint Martins, London</em></p>
 
         </div>
+
         <div class="resume-item">
           <h4>Fashion Design, Bachelor of Art</h4>
           <h5>Mar, 2017 - Feb, 2019</h5>
@@ -195,7 +196,42 @@
 
         </div>
       </div>
-      <div class="col-lg-6">
+
+      <div class="row">
+        <h3 class="resume-title">Intership</h3>
+        <div class="resume-item">
+          <h4>Fashion Designer</h4>
+          <h5>2023 - Present</h5>
+          <p><em>OLLY SHINDER LTD</em>
+            <details>
+              <summary><em>What I did</em></summary>
+              <div>
+                  <ul>
+                    <li>Garments Sample Making</li>
+                    <li>Pattern Cutting</li>
+                    <li>Fabric Developing</li>
+                    <li>Communicating with Fashion Industrial Factories in London</li>
+                    <li>Fashion Show Backstage Helper</li>
+                    <li>Pre-owned Item Resale</li>
+                    <li>Large Scale Party Planning (with Wolfgang Tilmans)</li>
+                  </ul>
+              </div>
+            </details>
+            <details>
+              <summary><em>What I learned</em></summary>
+              <div>
+                  <ul>
+                    <li>Studio Communicating Skills</li>
+                    <li>Essential Work Ethics</li>
+                    <li>Expert Sewing Skills</li>
+                    <li>Understanding LGBTQ Cultures</li>
+                  </ul>
+              </div>
+            </details>
+        </p>
+        </div>
+      </div>
+      <div class="row">
         <h3 class="resume-title">Professional Experience</h3>
         <div class="resume-item">
           <h4>Store Manager Trainee</h4>
@@ -296,60 +332,43 @@
 
       <div class="row portfolio-container">
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Cutting Project</h4>
-              <p> </p>
-              <div class="portfolio-links">
-                <a href="cutting_project.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
-                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bi bi-eye"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Denim Project</h4>
-              <p> </p>
-              <div class="portfolio-links">
-                <a href="denim_project.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
-                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bi bi-eye"></i></a>
+            <a href="denim_project.html"><img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Denim Project</h4>
               </div>
-            </div>
+            </a>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Jersey Project</h4>
-              <p> </p>
-              <div class="portfolio-links">
-                <a href="jersey_project.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
-                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bi bi-eye"></i></a>
+            <a href="jersey_project.html"><img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Jersey Project</h4>
               </div>
-            </div>
+            </a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <a href="cutting_project.html"><img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Cutting Project</h4>
+              </div>
+            </a>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>LVMH Sustainability Project</h4>
-              <p> </p>
-              <div class="portfolio-links">
-                <a href="LVMH_sustainability_project.html" data-gallery="portfolioDetailsGallery"
-                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                    class="bi bi-eye"></i></a>
+            <a href="LVMH_sustainability_project.html"><img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>LVMH Sustainability Project</h4>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
