--- a/denim_project.html
+++ b/denim_project.html
@@ -29,13 +29,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Personal
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -51,73 +44,51 @@
           <div class="col-lg-8">
             <h2 class="portfolio-title">Denim Project</h2>
 
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
+            <div class="images">
+              <img src="assets/img/portfolio/denim/1.png" alt=""
+                onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 1.png')">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/1.png" alt=""
-                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 1.png')">
-                </div>
+              <img src="assets/img/portfolio/denim/2.png" alt=""
+                onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 2.png')">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/2.png" alt=""
-                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 2.png')">
-                </div>
+              <img src="assets/img/portfolio/denim/3.png" alt=""
+                onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 3.png')">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/3.png" alt=""
-                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 3.png')">
-                </div>
+              <img src="assets/img/portfolio/denim/4.png" alt=""
+                onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 4.png')">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/4.png" alt=""
-                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 4.png')">
-                </div>
+              <img src="assets/img/portfolio/denim/5.png" alt=""
+                onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 5.png')">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/5.png" alt=""
-                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 5.png')">
-                </div>
+              <img src="assets/img/portfolio/denim/6.png" alt=""
+                onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 6.png')">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/6.png" alt=""
-                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 6.png')">
-                </div>
+              <img src="assets/img/portfolio/denim/7.png" alt=""
+                onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 7.png')">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/7.png" alt=""
-                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 7.png')">
-                </div>
+              <img src="assets/img/portfolio/denim/8.png" alt=""
+                onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 8.png')">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/8.png" alt=""
-                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 8.png')">
-                </div>
+              <img src="assets/img/portfolio/denim/9.png" alt=""
+                onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 9.png')">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/denim/9.png" alt=""
-                    onclick="window.open('assets/img/portfolio/denim/Denim Project/Page 9.png')">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
+              <h6><a href="index.html#portfolio">Back to Portfolio list</a></h6>
             </div>
-
           </div>
 
-          <div class="col-lg-4 portfolio-info">
-            <h3>Wash</h3>
-            <ul>
-              <li>UAL Central Saint Martins</li>
-              <li>BA fashion design Menswear 2nd yr</li>
-              <li>Youngbin Kim</li>
-              <li>'Denim project'</li>
-            </ul>
-          </div>
-
+        <div class="col-lg-4 portfolio-info">
+          <h3>Wash</h3>
+          <ul>
+            <li>UAL Central Saint Martins</li>
+            <li>BA fashion design Menswear 2nd yr</li>
+            <li>Youngbin Kim</li>
+            <li>'Denim project'</li>
+          </ul>
         </div>
 
       </div>
+
+    </div>
     </div><!-- End Portfolio Details -->
 
   </main><!-- End #main -->
