--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta property="og:title" content="Newtown Movement">
   <meta property="og:url" content="newtown-movement.com">
-  <meta property="og:description" content="Youngbin Kim" <meta property="og:image"
-    content="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/%EC%83%88%EB%A7%88%EC%9D%84%EA%B8%B0.svg/1200px-%EC%83%88%EB%A7%88%EC%9D%84%EA%B8%B0.svg.png">
+  <meta property="og:description" content="Youngbin Kim">
+  <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/%EC%83%88%EB%A7%88%EC%9D%84%EA%B8%B0.svg/1200px-%EC%83%88%EB%A7%88%EC%9D%84%EA%B8%B0.svg.png">
 
   <title>Newtown Movement</title>
   <meta content="" name="description">
@@ -228,7 +228,6 @@
                   </ul>
               </div>
             </details>
-        </p>
         </div>
       </div>
       <div class="row">
@@ -256,7 +255,6 @@
       </div>
     </div>
 
-    </div>
   </section><!-- End Resume Section -->
 
   <!-- ======= Services Section ======= -->
@@ -423,14 +421,6 @@
       </div>
     </div>
   </section><!-- End Contact Section -->
-
-  <!-- <div class="credits">
-    <!-- All the links in the footer should remain intact. -->
-  <!-- You can delete the links only if you purchased the pro version. -->
-  <!-- Licensing information: https://bootstrapmade.com/license/ -->
-  <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-  <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-  <!-- </div> -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
